--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ python-multipart>=0.0.9
 openai-whisper>=20231117
 sentence-transformers>=2.2.0
 numpy>=1.21.0
+openai>=1.0.0
+google-generativeai>=0.3.0
+huggingface_hub>=0.20.0
+requests>=2.28.0
